fix: overlap product cards on hover

--- a/components/ProductPreview/product-preview.scss
+++ b/components/ProductPreview/product-preview.scss
@@ -73,7 +73,8 @@
 
   &:hover {
     border-color: #eeeeee;
-
+    z-index: 10;
+    
     .product-preview__options {
       display: block;
     }
